# doomlegacy-svn-git

./: CMakeLists.txt  Makefile  README  make_options_dos  make_options_mac  make_options_nix  make_options_os2  make_options_win  toolchain_win32.cmake
docs/: 3dfloors.html  INSTALL.html  Make_WIN32.txt  boomref.html  console.html  doom_linedefs.ods  editing.html  faq.html  fsbasic.html  fsfuncs.html  index.html  legacy.css  legacy.html  source.html  tutorial.html  whatsnew.html
docs/res/: 3dfloor.wad  demo.wad  doom.pal  heretic.pal
docs/technical/: chexquest.txt  chexquest3.txt  wad_recognize.txt  wad_selection.txt
lang_bex/: french.bex
logs/: LogTVE.txt  WDJlog.txt  logboris.txt  logjudgecutor.txt  mmlog.txt  mystlog.txt  smitelog.txt  somlog2.txt  ssntails.txt
resources/: ENDOOM.lmp  FS_things.h  Makefile  VERSION.txt  legacy.wad.inventory
scripts/: README.rst  release.sh
src/: Makefile  action.h  am_map.c  am_map.h  b_bot.h  b_game.c  b_game.h  b_look.c  b_look.h  b_node.c  b_node.h  b_search.c  b_search.h  byteptr.h  command.c  command.h  console.c  console.h  d_clisrv.c  d_clisrv.h  d_englsh.h  d_event.h  d_french.h  d_items.c  d_items.h  d_main.c  d_main.h  d_net.c  d_net.h  d_netcmd.c  d_netcmd.h  d_netfil.c  d_netfil.h  d_player.h  d_think.h  d_ticcmd.h  dehacked.c  dehacked.h  doomdata.h  doomdef.h  (+151 more)
src/djgppdos/: I_main.c  I_net.c  I_sound.c  I_system.c  I_video.c  Vid_vesa.c  Vid_vesa.h  filesrch.c  i_cdmus.c
src/hardware/: CMakeLists.txt  hw3dsdrv.h  hw3sound.c  hw3sound.h  hw_bsp.c  hw_cache.c  hw_data.h  hw_defs.h  hw_draw.c  hw_drv.h  hw_glide.h  hw_glob.h  hw_light.c  hw_light.h  hw_main.c  hw_main.h  hw_md2.c  hw_md2.h  hw_poly.h  hw_trick.c
src/hardware/r_d3d/: R_d3d.cpp  gl2d3d.cpp  gl2d3d.h  r_d3d.dsp  r_d3d.h
src/hardware/r_glide/: 3dmath.c  3dmath.h  r_glide.c  r_glide.dsp
src/hardware/r_minigl/: r_minigl.c  r_minigl.dsp
src/hardware/r_opengl/: ogl_win.c  ogl_x11.c  r_opengl.c  r_opengl.dsp  r_opengl.h
src/hardware/s_ds3d/: s_ds3d.c  s_ds3d.dsp
src/linux_x/: cdioctl.c  dosstr.c  endtxt.c  filesrch.c  i_cdmus.c  i_cdmus_fbsd.c  i_main.c  i_net.c  i_sound.c  i_system.c  i_video_3dfx.c  i_video_ggi.c  i_video_xshm.c  searchp.c  searchp.h  vid_x11.c
src/linux_x/musserv/: Makefile  musserver.c  musserver.h  playmus.c  readwad.c  sequencer.c  usleep.c  usleep.h
src/macos/: doom_icon.icns  dosstr.c  endtxt.c  hwsym_mac.c  hwsym_mac.h  i_cdmus.c  i_input_mac.c  i_main.c  i_net.c  i_sound.c  i_system.c  i_video_mac.c  ogl_mac.c  searchp.c  searchp.h
src/os2/: ChangeLog  I_cdmus.c  I_dart.c  I_dive.c  I_main.c  I_net.c  I_os2.h  I_pm.c  I_pm.def  I_sound.c  I_system.c  I_video.c  Readme.OS2  debug.c  qmus2mid2.c  qmus2mid2.h
src/sdl/: CMakeLists.txt  SDLmain.m  dosstr.c  filesrch.c  hwsym_sdl.c  hwsym_sdl.h  i_cdmus.c  i_main.c  i_net.c  i_sound.c  i_system.c  i_video.c  ogl_sdl.c  ogl_sdl.h  searchp.h
src/win32/: afxres.h  dx_error.c  dx_error.h  fabdxlib.c  fabdxlib.h  filesrch.c  mid2strm.c  mid2strm.h  midstuff.h  resource.h  wLegacy.dsp  wLegacy.dsw  wLegacy.rc  win_cd.c  win_dbg.c  win_dbg.h  win_dll.c  win_dll.h  win_main.c  win_main.h  win_net.c  win_snd.c  win_sys.c  win_vid.c  win_vid.h
tools/: Makefile  dircomp2.c  fixdep.c  wadtool.cc
(+13 files in other folders)
